[package]
name = "rc_slice"
version = "0.3.0"

authors = ["Cole Miller <m@cole-miller.net>"]
categories = ["data-structures", "memory-management", "no-std"]
description = "Reference-counted slices with easy subdivision"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cole-miller/rc_slice"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
